# price_of_games

./: .gitignore  README.md  __print_all_price_all_versions_table.py  __print_all_price_all_versions_table__with_draw_plot.py  app.py  common.py  config.py  db.py  games.sqlite  main.py  pyproject.toml  requirements.txt  test_games.sqlite  web.py  web_v1.py  web_v2.py
app_parser/: logic.py  main.py  models.py  utils.py
app_web/: app.py  auth.py  main.py  web.py
app_web/lenta/: __init__.py  main.py
app_web/static/: index.css
app_web/static/DataTables/: datatables.min.css
app_web/static/draggable-resizable-dialog/: README.md  draggable-resizable-dialog.css
app_web/static/images/: README.md
app_web/static/js/: index.js
app_web/templates/: index.html
etc/: __print_all_price_all_versions_table__with_draw_plot.py  __update_append_date_from_lenta_of_played_games.py  game_update_append_date__and__modify_price_date.py  group_games_by_hour.py  test.py
integrator_genres/: main.py
integrity_check/: __init__.py
migrations/: 001.py
src/price_of_games/: common.py  config.py  db.py
src/price_of_games/app_parser/: __init__.py  logic.py  main.py  utils.py
src/price_of_games/app_web/: app.py  auth.py  main.py
src/price_of_games/etc/: __print_all_price_all_versions_table__with_draw_plot.py  __update_append_date_from_lenta_of_played_games.py  game_update_append_date__and__modify_price_date.py  group_games_by_hour.py
templates/: index_v1.html  index_v2.html
tests/: test.py  test_app_parser.py  test_app_web.py  test_integrity_check.py
(+11 files in other folders)
